feat: Implement dark mode and theme customization
Adds a dark mode toggle and introduces theming capabilities to the Lumina Invariant Core application. This includes new CSS variables for dark mode and extends Tailwind CSS configuration for themeable colors.

The user interface will now adapt to user preferences, offering a more comfortable viewing experience in various lighting conditions and enhancing the visual identity of the application.

--- a/index.html
+++ b/index.html
@@ -7,23 +7,52 @@
   <title>LUMINA INVARIANT // Logic Traversal Engine</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&family=Inter:wght@300;400;500;600;700;800&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            gold: {
+              DEFAULT: '#ca8a04',
+              light: '#fde047',
+              dark: '#854d0e',
+            }
+          }
+        }
+      }
+    }
+  </script>
   <style>
     :root {
       --gold-primary: #ca8a04;
       --gold-light: #fde047;
-      --bg-dark: #030303;
+      --app-bg: #ffffff;
+      --app-text: #0f172a;
+      --card-bg: rgba(248, 250, 252, 0.9);
+      --border-color: rgba(202, 138, 4, 0.25);
+      --panel-shadow: 0 8px 32px rgba(202, 138, 4, 0.1);
+      --terminal-bg: rgba(241, 245, 249, 0.8);
+    }
+
+    .dark {
+      --app-bg: #030303;
+      --app-text: #f3f4f6;
       --card-bg: rgba(10, 10, 10, 0.8);
       --border-color: rgba(202, 138, 4, 0.15);
+      --panel-shadow: 0 8px 32px rgba(0, 0, 0, 0.6);
+      --terminal-bg: rgba(0, 0, 0, 0.4);
     }
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: var(--bg-dark);
-      color: #f3f4f6;
+      background-color: var(--app-bg);
+      color: var(--app-text);
       background-image: 
         radial-gradient(circle at 50% 0%, rgba(202, 138, 4, 0.05) 0%, transparent 50%),
         radial-gradient(circle at 0% 100%, rgba(59, 130, 246, 0.03) 0%, transparent 40%);
       background-attachment: fixed;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     .font-mono { font-family: 'Fira Code', monospace; }
@@ -33,14 +62,15 @@
       background: linear-gradient(135deg, #fef08a 0%, #ca8a04 50%, #854d0e 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
+      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.1));
     }
 
     .glass-panel {
       background: var(--card-bg);
       backdrop-filter: blur(12px);
       border: 1px solid var(--border-color);
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
+      box-shadow: var(--panel-shadow);
+      transition: background 0.3s ease, border 0.3s ease, box-shadow 0.3s ease;
     }
 
     .terminal-scroll::-webkit-scrollbar {
