--- a/index.html
+++ b/index.html
@@ -48,11 +48,16 @@
       font-family: 'Inter', sans-serif;
       background-color: var(--app-bg);
       color: var(--app-text);
-      background-image: 
-        radial-gradient(circle at 50% 0%, rgba(202, 138, 4, 0.05) 0%, transparent 50%),
-        radial-gradient(circle at 0% 100%, rgba(59, 130, 246, 0.03) 0%, transparent 40%);
-      background-attachment: fixed;
       transition: background-color 0.3s ease, color 0.3s ease;
+      overflow: hidden;
+      margin: 0;
+      height: 100vh;
+      width: 100vw;
+    }
+
+    #root {
+      height: 100%;
+      width: 100%;
     }
 
     .font-mono { font-family: 'Fira Code', monospace; }
@@ -75,31 +80,11 @@
 
     .terminal-scroll::-webkit-scrollbar {
       width: 4px;
+      height: 4px;
     }
     .terminal-scroll::-webkit-scrollbar-thumb {
       background: rgba(202, 138, 4, 0.2);
       border-radius: 10px;
-    }
-
-    @keyframes scanline {
-      0% { transform: translateY(-100%); }
-      100% { transform: translateY(100%); }
-    }
-    .scanline::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(to bottom, transparent, rgba(202, 138, 4, 0.03), transparent);
-      animation: scanline 8s linear infinite;
-      pointer-events: none;
-    }
-
-    @keyframes glow-pulse {
-      0%, 100% { box-shadow: 0 0 20px rgba(202, 138, 4, 0.1); }
-      50% { box-shadow: 0 0 30px rgba(202, 138, 4, 0.25); }
-    }
-    .glow-hover:hover {
-      animation: glow-pulse 2s infinite;
     }
 
     .hud-border {
